==> kwagyeman/openmv/src/omv/ports/mimxrt/sensor.c <==
#include <string.h>
#include <stdint.h>
#include <stdbool.h>
#include "py/mphal.h"
#include "fsl_csi.h"
#include "mimxrt_hal.h"
#include "omv_boardconfig.h"
#include "omv_gpio.h"
#include "omv_i2c.h"
#include "sensor.h"
#include "framebuffer.h"
#define CSI_IRQ_FLAGS    (CSI_CR1_SOF_INTEN_MASK            \
                          | CSI_CR1_FB2_DMA_DONE_INTEN_MASK \
                          | CSI_CR1_FB1_DMA_DONE_INTEN_MASK)

int sensor_init() {
    int init_ret = 0;

    mimxrt_hal_csi_init(CSI);

    #if defined(DCMI_POWER_PIN)
    omv_gpio_write(DCMI_POWER_PIN, 1);
    #endif

    #if defined(DCMI_RESET_PIN)
    omv_gpio_write(DCMI_RESET_PIN, 1);
    #endif

    // Reset the sensor state
    memset(&sensor, 0, sizeof(sensor_t));

    // Set default snapshot function.
    // Some sensors need to call snapshot from init.
    sensor.snapshot = sensor_snapshot;

    // Configure the sensor external clock (XCLK).
    if (sensor_set_xclk_frequency(OMV_XCLK_FREQUENCY) != 0) {
        // Failed to initialize the sensor clock.
        return SENSOR_ERROR_TIM_INIT_FAILED;
    }

    // Detect and initialize the image sensor.
    if ((init_ret = sensor_probe_init(ISC_I2C_ID, ISC_I2C_SPEED)) != 0) {
        // Sensor probe/init failed.
        return init_ret;
    }

    // Set default color palette.
    sensor.color_palette = rainbow_table;

    // Disable VSYNC IRQ and callback
    sensor_set_vsync_callback(NULL);

    // Disable Frame callback.
    sensor_set_frame_callback(NULL);

    // All good!
    sensor.detected = true;

    return 0;
}

int sensor_dcmi_config(uint32_t pixformat) {
    CSI_Reset(CSI);
    NVIC_DisableIRQ(CSI_IRQn);

    // CSI mode: HSYNC, VSYNC, and PIXCLK signals are used.
    CSI_REG_CR1(CSI) |= CSI_CR1_GCLK_MODE(1U);
    // Synchronous FIFO clear.
    // RXFIFO and STATFIFO are cleared on every SOF.
    CSI_REG_CR1(CSI) |= CSI_CR1_FCC_MASK;

    // Configure VSYNC, HSYNC and PIXCLK signals.
    CSI_REG_CR1(CSI) |= CSI_CR1_EXT_VSYNC_MASK;
    CSI_REG_CR1(CSI) |= !sensor.hw_flags.vsync ? CSI_CR1_SOF_POL_MASK    : 0;
    CSI_REG_CR1(CSI) |= !sensor.hw_flags.hsync ? CSI_CR1_HSYNC_POL_MASK  : 0;
    CSI_REG_CR1(CSI) |= sensor.hw_flags.pixck ? CSI_CR1_REDGE_MASK      : 0;

    // Stride config: No stride.
    CSI_REG_FBUF_PARA(CSI) = 0;
    // Reset frame counter
    CSI_REG_CR3(CSI) |= CSI_CR3_FRMCNT_RST_MASK;

    // Configure CSI FIFO depth and DMA burst size.
    CSI_REG_CR2(CSI) |= CSI_CR2_DMA_BURST_TYPE_RFF(3U);
    CSI_REG_CR3(CSI) |= 7U << CSI_CR3_RxFF_LEVEL_SHIFT;

    // Configure DMA buffers.
    CSI_REG_DMASA_FB1(CSI) = (uint32_t) (&_line_buf[OMV_LINE_BUF_SIZE * 0]);
    CSI_REG_DMASA_FB2(CSI) = (uint32_t) (&_line_buf[OMV_LINE_BUF_SIZE / 2]);

    // Write to memory from first completed frame.
    // DMA CSI addr switch at dma transfer done.
    CSI_REG_CR18(CSI) |= CSI_CR18_MASK_OPTION(0);
    return 0;
}

int sensor_abort() {
    NVIC_DisableIRQ(CSI_IRQn);
    CSI_DisableInterrupts(CSI, CSI_IRQ_FLAGS);
    CSI_REG_CR18(CSI) &= ~(CSI_CR18_CSI_ENABLE_MASK | CSI_CR3_DMA_REQ_EN_RFF_MASK);
    framebuffer_reset_buffers();
    return 0;
}

int sensor_set_xclk_frequency(uint32_t frequency) {
    if (frequency >= 24000000) {
        CLOCK_SetDiv(kCLOCK_CsiDiv, 0);
    } else if (frequency >= 12000000) {
        CLOCK_SetDiv(kCLOCK_CsiDiv, 1);
    } else if (frequency >= 8000000) {
        CLOCK_SetDiv(kCLOCK_CsiDiv, 2);
    } else if (frequency >= 6000000) {
        CLOCK_SetDiv(kCLOCK_CsiDiv, 3);
    } else if (frequency >= 4000000) {
        CLOCK_SetDiv(kCLOCK_CsiDiv, 5);
    } else {
        CLOCK_SetDiv(kCLOCK_CsiDiv, 7);
    }
    return 0;
}

int sensor_snapshot_dma_setup(sensor_t *sensor, int w, int h) {
    // If the DMA is Not currently transferring a new buffer,
    // reconfigure and restart the CSI transfer.
    if (!(CSI->CR18 & CSI_CR18_CSI_ENABLE_MASK)) {
        framebuffer_setup_buffers();

        vbuffer_t *buffer = framebuffer_get_tail(FB_PEEK);
        if (buffer == NULL) {
            return SENSOR_ERROR_FRAMEBUFFER_ERROR;
        }
        // Re/configure and re/start the CSI.
        uint32_t bytes_per_pixel = sensor_get_src_bpp();
        uint32_t dma_line_bytes = resolution[sensor->framesize][0] * bytes_per_pixel;
        CSI_REG_IMAG_PARA(CSI) =
            (dma_line_bytes << CSI_IMAG_PARA_IMAGE_WIDTH_SHIFT) |
            (1 << CSI_IMAG_PARA_IMAGE_HEIGHT_SHIFT);

        // Configure and enable CSI interrupts.
        CSI_EnableInterrupts(CSI, CSI_IRQ_FLAGS);
        NVIC_EnableIRQ(CSI_IRQn);

        // Enable CSI
        CSI_REG_CR18(CSI) |= CSI_CR18_CSI_ENABLE_MASK;
    }
    return 0;
}
